--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asn1crypto==0.24.0
+attrs==19.1.0
+Automat==0.7.0
 backcall==0.1.0
 bcrypt==3.1.6
 blessings==1.7
@@ -6,28 +8,51 @@ bpython==0.18
 certifi==2019.3.9
 cffi==1.12.3
 chardet==3.0.4
+constantly==15.1.0
 cryptography==2.6.1
+cssselect==1.0.3
 curtsies==0.3.0
 decorator==4.4.0
 greenlet==0.4.15
+hyperlink==19.0.0
 idna==2.8
+incremental==17.5.0
 ipython==7.5.0
 ipython-genutils==0.2.0
 jedi==0.13.3
+kamene==0.32
+lxml==4.3.3
 netaddr==0.7.19
+numpy==1.16.3
+opencv-contrib-python==4.1.0.25
+opencv-contrib-python-headless==4.1.0.25
+opencv-python==4.1.0.25
+opencv-python-headless==4.1.0.25
 paramiko==2.4.2
+parsel==1.5.1
 parso==0.4.0
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 pyasn1==0.4.5
+pyasn1-modules==0.2.5
 pycparser==2.19
+PyDispatcher==2.0.5
 Pygments==2.3.1
+PyHamcrest==1.9.0
 PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+queuelib==1.5.0
 requests==2.21.0
+scapy-python3==0.26
+Scrapy==1.6.0
+service-identity==18.1.0
 six==1.12.0
 traitlets==4.3.2
+Twisted==19.2.0
 typing==3.6.6
 urllib3==1.24.3
+w3lib==1.20.0
 wcwidth==0.1.7
+zope.interface==4.6.0
