--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,9 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 queuelib==1.5.0
 requests==2.21.0
+scapy==2.4.2
 scapy-python3==0.26
+scipy==1.3.0
 Scrapy==1.6.0
 service-identity==18.1.0
 six==1.12.0
