--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cryptography==2.6.1
 cssselect==1.0.3
 curtsies==0.3.0
 decorator==4.4.0
+github3.py==1.3.0
 greenlet==0.4.15
 hyperlink==19.0.0
 idna==2.8
@@ -20,6 +21,7 @@ incremental==17.5.0
 ipython==7.5.0
 ipython-genutils==0.2.0
 jedi==0.13.3
+jwcrypto==0.6.0
 kamene==0.32
 lxml==4.3.3
 netaddr==0.7.19
@@ -43,6 +45,7 @@ Pygments==2.3.1
 PyHamcrest==1.9.0
 PyNaCl==1.3.0
 pyOpenSSL==19.0.0
+python-dateutil==2.8.0
 queuelib==1.5.0
 requests==2.21.0
 scapy==2.4.2
@@ -54,6 +57,7 @@ six==1.12.0
 traitlets==4.3.2
 Twisted==19.2.0
 typing==3.6.6
+uritemplate==3.0.0
 urllib3==1.24.3
 w3lib==1.20.0
 wcwidth==0.1.7
