--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ jwcrypto==0.6.0
 kamene==0.32
 lxml==4.3.3
 netaddr==0.7.19
+NetfilterQueue==0.8.1
 numpy==1.16.3
 opencv-contrib-python==4.1.0.25
 opencv-contrib-python-headless==4.1.0.25
