--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+aenum==2.2.1
 asn1crypto==0.24.0
 attrs==19.1.0
 Automat==0.7.0
 backcall==0.1.0
 bcrypt==3.1.6
+beautifulsoup4==4.8.1
 blessings==1.7
 bpython==0.18
 certifi==2019.3.9
@@ -13,6 +15,7 @@ cryptography==2.6.1
 cssselect==1.0.3
 curtsies==0.3.0
 decorator==4.4.0
+fbchat==1.8.3
 github3.py==1.3.0
 greenlet==0.4.15
 hyperlink==19.0.0
@@ -55,6 +58,7 @@ scipy==1.3.0
 Scrapy==1.6.0
 service-identity==18.1.0
 six==1.12.0
+soupsieve==1.9.4
 traitlets==4.3.2
 Twisted==19.2.0
 typing==3.6.6
