--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ bpython==0.18
 certifi==2019.3.9
 cffi==1.12.3
 chardet==3.0.4
+colorama==0.4.1
 constantly==15.1.0
 cryptography==2.6.1
 cssselect==1.0.3
